--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.animation.rigging": "0.3.4-preview",
     "com.unity.cinemachine": "2.5.0",
     "com.unity.collab-proxy": "1.3.8",
+    "com.unity.formats.fbx": "3.2.1-preview.2",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
